--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-community/checkbox": "^0.5.16",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "expo-secure-store": "^12.5.0",
+    "firebase": "^10.6.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "^0.72.6",
